force-app/main/default/objects/Cost_Posting__c/Cost_Posting__c.object-meta.xml
<CustomObject>
    <label>Cost Posting</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Cost Posting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>