force-app/main/default/objects/Cost_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Type__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>maplewood</value>
    </filters>
    <label>All</label>
</ListView>