force-app/main/default/objects/Cost_Posting__c/listViews/Labor_Cost_Posting.listView-meta.xml
<ListView>
    <fullName>Labor_Cost_Posting</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Type__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </filters>
    <label>Labor Cost Posting</label>
</ListView>